# Agent-Identity-Layer

./: .dockerignore  .env.example  .gitignore  AIL_Cowork_Briefing.docx  CONTRIBUTING.md  Dockerfile  README.md  fly.toml  package-lock.json  package.json  test-local.html  wrangler.toml
demo/: index.html
docs/: cloudflare-migration.md  deployment.md  guide.md  mvp-scope.md  owner-attribution.md  publish-checklist.md  repo-structure.md  thesis-one-pager.md  threat-model.md  v3-integration-plan.md
examples/: delegated-coding-agent.json  local-unregistered.v1.json  registered-agent.v1.json  single-agent.local.json  tool-call.signed-placeholder.json
nft/: .env.example  .env.mainnet  deployments.json  hardhat.config.js  package-lock.json  package.json
nft/contracts/: AILAchievement.sol  AILIdentity.sol
nft/scripts/: deploy-achievement.js  deploy-mainnet.sh  deploy.js  deployments.js  set-achievement-minter.js  set-minter.js
nft/test/: AILAchievement.test.js  AILIdentity.test.js
prompts/: homepage-design-prompt.md
scripts/: demo-register.mjs  generate-master-key.mjs  test-auth.mjs  test-developer-docs.mjs  test-phase2b.mjs  test-register-flow.mjs  test-register-session.mjs  test-reputation.mjs  test-web-default-lang.mjs  validate-examples.mjs
sdk/js/: README.md  index.d.ts  index.mjs  package.json
sdk/js/src/: client.mjs  crypto.mjs  envelope.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/agentidcard/: __init__.py  client.py  crypto.py
sdk/python/ail_sdk/: __init__.py  client.py  envelope.py
server/: README.md  app.mjs  auth-verify.html  badge.js  dashboard.html  developers.html  index.mjs  register.html  widget.js
server/lib/: ail-id.mjs  chain.mjs  crypto.mjs  db.mjs  email.mjs  image-generator.mjs
server/routes/: admin.mjs  agents.mjs  owners.mjs  verify.mjs
spec/: README.md  agent-identity-envelope.v0.md  agent-identity-envelope.v1.md
web-page/: code.html  index.html
workers/: index.mjs
workers/lib/: achievements.mjs  ail-id.mjs  chain.mjs  crypto.mjs  db.mjs  email.mjs  image-generator.mjs  scoring.mjs  season-report.mjs  verification.mjs
workers/routes/: admin.mjs  agents.mjs  auth.mjs  owners.mjs  profile.mjs  reputation.mjs  sources.mjs  verify.mjs
