[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ail-sdk"
version = "0.1.0"
description = "Python SDK for Agent ID Card"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Agent ID Card", email = "contact@agentidcard.org" }]
keywords = ["agent-identity", "22blabs", "ail", "credential", "jwt", "nft", "erc721"]
dependencies = [
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://agentidcard.org"
Repository = "https://github.com/sinmb79/Agent-Identity-Layer"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ail_sdk*"]
