[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentidcard"
version = "1.1.0"
description = "Official Python SDK for Agent ID Card - AI agent identity credentials"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Agent ID Card", email = "contact@agentidcard.org" }]
keywords = ["agent-identity", "agentidcard", "ail", "credential", "jwt", "nft", "erc721"]
dependencies = [
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://agentidcard.org"
Repository = "https://github.com/sinmb79/Agent-Identity-Layer"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentidcard*"]
